# SolarExplorer

./: .dockerignore  .env.example  .replit  Dockerfile  README.md  app.py  bot.py  bot_runner.py  config.py  database.py  energy_bot.py  main.py  minimal_bot.py  models.py  price_alert_bot.py  price_monitor.py  price_prediction.py  price_scheduler.py  pyproject.toml  replit.nix  routes.py  run_bot.py  simple_bot.py  simple_price_bot.py  simple_price_monitor.py  simple_telegram_bot.py  tesla_api.py  test_agents.py  test_price_predictions.py  test_telegram_alerts.py  test_webhook.py  weather_provider.py
agents/: __init__.py  agent_manager.py  analysis_agent.py  base_agent.py  coordinator_agent.py  data_collection_agent.py  live_price_agent.py  notification_agent.py  prediction_agent.py  tesla_charging_agent.py
agents/protocols/: message_protocol.py
attached_assets/: Pasted-import-requests-import-json-from-telegram-import-Update-Bot-from-telegram-ext-import-Application-1739757985181.txt
db/: test_data_setup.sql
k8s/base/: hpa.yaml  (+5 more)
modules/: __init__.py  base_module.py  dashboard_module.py  errors.py  ml_prediction_module.py  module_manager.py  pattern_analysis_module.py  price_monitor_module.py
providers/: base_provider.py  comed_provider.py
simple_approach/: bot.py  price_monitor.py
templates/: agent_dashboard.html  base.html  dashboard.html  error.html  module_manager.html  tesla_success.html
tests/: test_bot_modules.py  test_live_price_agent.py  test_modules.py  test_tesla_charging.py
utils/: analytics_helper.py  tesla_api.py  twilio_sender.py
