[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-restx>=1.3.0",
    "flask>=2.0.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.0",
    "python-telegram-bot[job-queue]>=20.0",
    "requests>=2.31.0",
    "telegram>=0.0.1",
    "twilio>=9.4.5",
    "numpy>=2.2.3",
    "sqlalchemy>=2.0.38",
    "nest-asyncio>=1.6.0",
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.13.3",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "oauthlib>=3.2.2",
    "slack-sdk>=3.34.0",
    "werkzeug>=3.1.3",
    "asgiref>=3.8.1",
    "hypercorn>=0.17.3",
]
